Build system appears to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,14 @@ elseif(BOARD STREQUAL "T31")
     message(STATUS "Selected board T31")
 elseif(BOARD STREQUAL "FH8626V100")
     message(STATUS "Selected board FH8626V100")
+elseif(BOARD STREQUAL "STATICIMAGE")
+    message(STATUS "Selected board STATICIMAGE")
+elseif(BOARD STREQUAL "ANIMATION")
+    message(STATUS "Selected board ANIMATION")
+elseif(BOARD STREQUAL "LIVESTREAM")
+    message(STATUS "Selected board LIVESTREAM")
 else()
-    message(FATAL "${BOARD} is not implemented yet.")
+    message(FATAL_ERROR "${BOARD} is not implemented yet.")
 endif()
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/CMake/${BOARD}.cmake)
@@ -67,8 +73,6 @@ if(NOT BOARD_DESTINATION_PLATFORM OR BOARD_DESTINATION_PLATFORM STREQUAL "")
     set(BOARD_DESTINATION_PLATFORM OFF)
 endif()
 
-# Log out the value of CONFIG_ARM
-message(STATUS "CONFIG_ARM is ${CONFIG_ARM}")
 
 add_library(embedded-media-static STATIC ${SRCS} ${BOARD_SRCS})
 if(BOARD_BUILD_DEPENDS AND NOT (BOARD_BUILD_DEPENDS STREQUAL ""))
