--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 zephyr_include_directories(.)
 
 set(CMAKE_CROSSCOMPILING "TRUE")
-set(CMAKE_SYSTEM_PROCESSOR "armv8-m")
+# set(CMAKE_SYSTEM_PROCESSOR "armv8-m")
 set(CMAKE_EXE_LINKER_FLAGS_INIT "--specs=nosys.specs") #picolibc?
 set(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_SYSTEM_VERSION "0.0.0")
 
 # Define the target CPU and architecture
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=cortex-m33 -march=armv8-m.main+dsp")
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=cortex-m33 -march=armv8-m.main+dsp")
 
 # Enable thumb mode explicitly
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mthumb")
