Add MI LIVESTREAM board

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ elseif(BOARD STREQUAL "ANIMATION")
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/image/include)
     message(STATUS "Selected board ANIMATION")
 elseif(BOARD STREQUAL "LIVESTREAM")
-    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/image/include)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/usb/include)
     message(STATUS "Selected board LIVESTREAM")
 else()
     message(FATAL_ERROR "${BOARD} is not implemented yet.")
